<package format="2">
  <name>mobilelab_simulation</name>
  <version>0.0.1</version>
  <description>
    Simulation for the Mobile Lab MAIA project
  </description>
  <maintainer email="huber.emanuel@outlook.com">Emanuel Huber</maintainer>
  <license>APACHE 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>mobilelab_msgs</depend>

  <exec_depend>fake_localization</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>mobilelab_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
